--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   cloud_firestore: ^4.4.0
   mangadex_library: ^1.4.5
   http: ^0.13.5
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.13
 
 dev_dependencies:
   flutter_test:
