--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.0.13
   flutter_riverpod: ^2.3.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
